# Anchor-point

./: README.md
anchor-point-backend-main/anchor-point-backend-main/: .gitignore  Makefile  create_test_users.py  dev.Jenkinsfile  pg_logfile  prod.Jenkinsfile  pyproject.toml  run.sh  seed.sql  test_domain.py  update.sql
anchor-point-backend-main/anchor-point-backend-main/deployment/: README.md  dev-docker-compose.yml  dev.Dockerfile  entry_point.sh  local-docker-compose.yml  local.Dockerfile  local_db.Dockerfile  prod-docker-compose.yml  prod.Dockerfile
anchor-point-backend-main/anchor-point-backend-main/local_pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
anchor-point-backend-main/anchor-point-backend-main/local_pgdata/global/: 1213  1213_fsm  1213_vm  1214  1214_fsm  1214_vm  1232  1233  1260  1260_fsm  1260_vm  1261  1261_fsm  1261_vm  1262  1262_fsm  1262_vm  2396  2396_fsm  2396_vm  2397  2671  2672  2676  2677  pg_control  pg_internal.init
anchor-point-backend-main/anchor-point-backend-main/local_pgdata/pg_stat/: pgstat.stat
anchor-point-backend-main/anchor-point-backend-main/local_pgdata/pg_xact/: 0000
anchor-point-backend-main/anchor-point-backend-main/src/: app.py  logger.py
anchor-point-backend-main/anchor-point-backend-main/src/app_configs/: README.md  configs.py  constants.py  dev_configs.py  logger_config.py  prod_configs.py
anchor-point-backend-main/anchor-point-backend-main/src/app_dependencies/: middlewares.py
anchor-point-backend-main/anchor-point-backend-main/src/app_models/: README.md  crud.py  database.py  models.py
(+743 files in other folders)
