[tool.poetry]
name = "Anchor point backend"
version = "1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
black = "^23.7.0"
httpx = "^0.24.1"
pytest = "^7.4.1"
memory-profiler = "^0.61.0"
grpcio = "^1.59.0"
protobuf = "^4.24.3"
grpcio-tools = "^1.59.0"
types-protobuf = "^4.24.0.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
PyJWT = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pytz = "^2023.3.post1"
pyotp = "^2.9.0"
python-dotenv = "^1.0.0"
firebase-admin = "^6.2.0"
twilio = "^8.10.2"
ortools = "^9.8.3296"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2" 
pyhtml2pdf= "^0.0.7"
googlemaps = "^4.10.0"
pillow = "^10.2.0"
num2words = "0.5.13"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
phonenumbers = "^8.13.44"
apscheduler = "^3.11.0"
tzlocal = "^5.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"